--- a/2018/04/alumni-elections/style.css
+++ b/2018/04/alumni-elections/style.css
@@ -35,6 +35,7 @@ hr {
 }
 
 .featured-img {
+  max-height: 150px;
   max-width: 150px;
   border-radius: 50%;
 }
@@ -42,6 +43,7 @@ hr {
 .featured-bubble {
   border-radius: 50%;
   height: 150px;
+  width: 150px;
   margin-left: 50px;
 }
 
@@ -98,11 +100,13 @@ hr {
 /* candidate carousel */
 .bubble-img {
   max-width: 100px;
+  max-height: 100px;
   border-radius: 50%;
 }
 
 .bubble {
   border-radius: 50%;
+  width: 100px;
   height: 100px;
   opacity: 0.5;
 }
@@ -130,6 +134,7 @@ hr {
 
 .slick-slide .dem-border, .slick-slide .rep-border, .slick-slide .uup-border  {
   width: 100px;
+  height: 100px;
   padding: 8px;
   border: none;
 }
@@ -137,6 +142,7 @@ hr {
 .slick-current .outer-bubble {
   border-radius: 50%;
   width: 100px;
+  height: 100px;
   border-style: solid;
   padding: 7px;
 }
