fix all http projects references, change over all 2018 pages to https

--- a/2018/03/march-madness/style.css
+++ b/2018/03/march-madness/style.css
@@ -91,7 +91,7 @@ hr {
   justify-content: center;
   text-align: center;
   min-height: 50vh;
-  background-image: url('http://snworksceo.imgix.net/dpn/da17d027-5a86-4c0d-8975-90b57d4381a2.sized-1000x1000.jpg');
+  background-image: url('https://snworksceo.imgix.net/dpn/da17d027-5a86-4c0d-8975-90b57d4381a2.sized-1000x1000.jpg');
   background-color: #9d2235;
   background-blend-mode: multiply;
   background-position: center center;
