fix 2016 https, add penn relays to main page

--- a/2016/11/basketball-preview/css/offense.css
+++ b/2016/11/basketball-preview/css/offense.css
@@ -58,16 +58,15 @@ big {
 }
 
 .ross {
-  background-image: url(http://i.imgur.com/b4ngce4.gif);
+  background-image: url(https://i.imgur.com/b4ngce4.gif);
 }
 
 .whitlatch {
-  background-image: url(http://i.imgur.com/zChS5xh.gif);
+  background-image: url(https://i.imgur.com/zChS5xh.gif);
 }
 
-
 .brzozowski {
-  background-image: url(http://i.imgur.com/WSz0Ywp.gif);
+  background-image: url(https://i.imgur.com/WSz0Ywp.gif);
 }
 
 .stats {
