--- a/2016/11/basketball-preview/css/sophomores.css
+++ b/2016/11/basketball-preview/css/sophomores.css
@@ -88,7 +88,7 @@
 }
 
 .rothchild {
-  background-image: url(http://media.dpn.s3.amazonaws.com/54789_rothchild04o.png);
+  background-image: url(https://s3.amazonaws.com/media.dpn/54789_rothchild04o.png);
 }
 
 .donahue {
