--- a/2013/10/survivingsilence/css/webstyle.css
+++ b/2013/10/survivingsilence/css/webstyle.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Average);
-@import url(http://fonts.googleapis.com/css?family=Oxygen);
+@import url(https://fonts.googleapis.com/css?family=Average);
+@import url(https://fonts.googleapis.com/css?family=Oxygen);
 
 
 html, body {
