--- a/2014/12/From_demolition_to_collaboration/style2.css
+++ b/2014/12/From_demolition_to_collaboration/style2.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Average);
-@import url(http://fonts.googleapis.com/css?family=Oxygen);
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(https://fonts.googleapis.com/css?family=Average);
+@import url(https://fonts.googleapis.com/css?family=Oxygen);
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 
 
 body, html {
