--- a/2018/09/football-preview/style.css
+++ b/2018/09/football-preview/style.css
@@ -105,6 +105,11 @@ footer {
 	margin: 0 15px;
 }
 
+.ad {
+	display: flex;
+	justify-content: center;
+}
+
 .standings {
 	display: flex;
 	background-color: #DDD;
