--- a/2018/09/NEC/style.css
+++ b/2018/09/NEC/style.css
@@ -1,32 +1,7 @@
-@font-face {
-  font-family: 'neuzeit-grotesk';
-  src: url("https://use.typekit.net/af/342b40/0000000000000000000178a6/27/l?subset_id=1&fvd=n4&v=3") format("woff2"), url("https://use.typekit.net/af/342b40/0000000000000000000178a6/27/d?subset_id=1&fvd=n4&v=3") format("woff"), url("https://use.typekit.net/af/342b40/0000000000000000000178a6/27/a?subset_id=1&fvd=n4&v=3") format("opentype");
-  font-style: normal;
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'neuzeit-grotesk';
-  src: url("https://use.typekit.net/af/ae9007/0000000000000000000178a7/27/l?subset_id=1&fvd=n7&v=3") format("woff2"), url("https://use.typekit.net/af/ae9007/0000000000000000000178a7/27/d?subset_id=1&fvd=n7&v=3") format("woff"), url("https://use.typekit.net/af/ae9007/0000000000000000000178a7/27/a?subset_id=1&fvd=n7&v=3") format("opentype");
-  font-style: normal;
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: 'Lora';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lora Regular'), local('Lora-Regular'), url(https://fonts.gstatic.com/s/lora/v12/0QIvMX1D_JOuMwr7I_FMl_E.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'Lora';
-  font-style: italic;
-  font-weight: 400;
-  src: local('Lora Italic'), local('Lora-Italic'), url(https://fonts.gstatic.com/s/lora/v12/0QIhMX1D_JOuMw_LIftLtfOm8w.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+/* neuzeit-grotesk */
+@import url("https://use.typekit.net/psa2uuo.css");
+/* Lora */
+@import url('https://fonts.googleapis.com/css?family=Lora');
 
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
