--- a/2018/10/housing-guide/style.css
+++ b/2018/10/housing-guide/style.css
@@ -38,3 +38,26 @@ h1 {
   text-align: left;
   color: #000;
 }
+
+.featured-elt {
+  position: relative;
+  margin-top: 100px;
+}
+.featured-elt img {
+  width: 850px;
+  height: 450px;
+  margin-left: 300px;
+}
+
+.featured-text {
+  background-color: rgb(248, 248, 248);
+  width: 500px;
+  position: absolute;
+  top: 150px;
+  display: flex;
+  flex-direction: column;
+}
+
+.featured-button {
+  width: fit-content;
+}
