--- a/2018/10/housing-guide/style.css
+++ b/2018/10/housing-guide/style.css
@@ -7,11 +7,12 @@ h1 {
 }
 
 .navbar {
-	display: flex;
-	justify-content: center;
-	background-color: #000;
+  display: flex;
+  justify-content: center;
+  background-color: #000;
   padding-top: 10px;
   padding-bottom: 5px;
+  align-items: center;
 }
 
 .title {
@@ -41,23 +42,71 @@ h1 {
 
 .featured-elt {
   position: relative;
-  margin-top: 100px;
-}
-.featured-elt img {
-  width: 850px;
-  height: 450px;
-  margin-left: 300px;
+  margin: 30px 0px 30px 0px;
+  padding-bottom: 100px;
+  display: flex;
+  height: 100vh;
+  background-image: url('https://snworksceo.imgix.net/dpn/d5f0df72-89cf-419f-8e7a-3d82e4ec2f3a.sized-1000x1000.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 150px 20px;
+  background-origin: content-box;
 }
 
 .featured-text {
   background-color: rgb(248, 248, 248);
-  width: 500px;
+  width: 40%;
   position: absolute;
-  top: 150px;
-  display: flex;
-  flex-direction: column;
+  top: 40%;
+  padding: 20px 20px 20px 20px;
+  margin-left: -40px;
 }
 
 .featured-button {
   width: fit-content;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.video {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+@media only screen and (max-width : 900px) {
+  .featured-elt {
+    width: 100%;
+    background-position: 0px 20px;
+  }
+
+  .featured-text {
+    width: 60%;
+    font-size: 14px;
+  }
+}
+
+@media only screen and (max-width : 700px) {
+  .featured-elt {
+    width: 100%;
+    background-position: 0px 20px;
+    flex-direction: row;
+  }
+
+  .featured-text {
+  }
 }
